test/types/type_variables/jplevyak/construct-1.chpl
record R {
  type t;
  var x : t;
}

var r : R(t = real, x = 3);

writeln(r);
